[metadata]
name = chemise
version = 0.0.1-alpha
description = AI
author = Tim Cargan
Licence = None
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    chemise
install_requires =
    absl-py
    numpy
    jax
    jaxtyping
    flax
    setuptools
    plotext
    rich >= 12.4
python_requires = >=3.9
package_dir =
    =src
zip_safe = no