[metadata]
name = chemise
version = 0.0.1-alpha2
description = Wrapper for training flax models
author = Tim Cargan
Licence = Apache-2.0
url=https://github.com/timcargan/chemise
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    chemise
install_requires =
    absl-py
    numpy
    jax
    jaxtyping
    einops
    flax
    orbax-checkpoint
    chex
    setuptools
    plotext
    rich >= 12.4
python_requires = >=3.9
package_dir =
    =src
zip_safe = no